@@ -4,9 +4,9 @@
 #include <iostream>
 #include <string>
 
-#include <bobcat/msg>
 #include <bobcat/errno>
 #include <bobcat/arg>
+#include <bobcat/mstream>
 
 #include "rules/rules.h"
 #include "parser/parser.h"
