@@ -5,11 +5,8 @@
 #include <iostream>
 #include <iomanip>
 
-#include <bobcat/msg>
-
 #include "../firstset/firstset.h"
 #include "../nonterminal/nonterminal.h"
 
 using namespace std;
-using namespace FBB;
 
