@@ -1,7 +1,4 @@
 #include "symbol.h"
 
-#include <bobcat/msg>
-
 using namespace std;
-using namespace FBB;
 
